--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1879,3 +1879,37 @@ ul.actions {
           margin-top: 0; } }
 
 /*# sourceMappingURL=main.css.map */
+
+/*POPIN*/
+
+.btnPopup{
+  background-color:white;
+  padding: 1em 2em;
+  cursor: pointer;
+}
+
+.btnPopup:hover{
+  background-color: rgb(192, 192, 192);}
+
+.overlay {
+  position: fixed;
+  left: 0px;
+  top:0px;
+  background-color: rgba(0,0 ,0 , 0.5);
+  width: 100%;
+  height: 100%;
+  display:none;
+}
+.popup{
+  margin: 10% auto;
+  width : 70%;
+  background-color: rgb(243, 243, 243);
+  padding: 1em;
+  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+}
+.btnClose {
+  font-size:16pt;
+  cursor: pointer;
+  color: red/*rgb(26, 26, 26)*/;
+}
